--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="max-w-lg mx-auto bg-white rounded-lg shadow-md p-8">
                 <h1 class="text-3xl font-bold text-center text-blue-800 mb-6">Legitimate Focus Matrix</h1>
                 <p class="text-gray-600 text-center mb-8">
-                    Find out where your time and attention should go based on current and future value. 
+                    Discover where your time and attention should go based on current and future value. 
                     This tool helps you prioritize tasks and allocate your time according to what truly matters.
                 </p>
                 <button id="get-started-btn" class="block mx-auto bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg transition duration-200">
